# Pysa

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
Pysa/: README.md  pyproject.toml
Pysa/.github/workflows/: publish.yml
Pysa/src/pysa/: __init__.py  core.py
Pysa/src/pysa.egg-info/: SOURCES.txt
src/pysa/: __init__.py  benchmarks.py  core.py  estimators.py  presets  presets.py  replication.py  results.py
src/pysa.egg-info/: PKG-INFO
tests/: test_core.py
