[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysa"
version = "0.1.0"
description = "PISA-style weighted least squares with BRR-Fay and plausible values."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "F Civilini" }
]
dependencies = [
  "numpy",
  "pandas",
  "statsmodels",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
