[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysa-pv"
version = "1.0.1"
description = "Library meant to analyse Large Scale Assessments in Education"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "F Civilini" }
]
dependencies = [
  "numpy",
  "pandas",
  "statsmodels",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
